[package]
name = "qpm_qmod"
version = "0.1.0"
edition = "2021"
authors = [
    "RedBrumbler <redbrumbler.official@gmail.com>"
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = { version = "1.0", features = ["serde"] }
zip = "0.6"

stopwatch = "0.0.7" # timing tests
anyhow = "1.0"